# manim-gpt

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.builder  Dockerfile.nix  Dockerfile.runtime  README.md  build-nix-docker.sh  docker-compose.yml  flake.nix  gradio_app.py  main.py  package-lock.json  pyproject.toml  test_gradio_workflow.py  test_session_api.py
.github/workflows/: ci.yml  docker-build-push.yml  docker-builder.yml  docker-nix-build.yml  docker-publish.yml  docker-runtime.yml  release.yml
.idx/: dev.nix
api/: __init__.py  code_routes.py  model_routes.py  session_routes.py  video_routes.py
docs/: API_DOCUMENTATION.md  CONFIGURATION.md  INSTALLATION.md  TROUBLESHOOTING.md  UI_GUIDE.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CodeEditor.jsx  GenerationForm.jsx  IterationLogs.jsx  ModelSelector.jsx  ProgressView.jsx  RenderSettings.jsx  VideoPlayer.jsx
frontend/src/services/: api.js
models/: __init__.py  schemas.py  session.py
services/: __init__.py  audio_generator.py  code_generation.py  code_validator.py  iterative_workflow.py  session_manager.py  session_updater.py  subtitle_generator.py  video_rendering.py
utils/: __init__.py  constants.py  logger.py  logging.py
