[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "litellm>=1.80.0",
    "pydantic>=2.12.4",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
]
